# lingo-loop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.claude-plugin/: plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  workflow.yml
.planning/: config.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
agents/: tutor-judge.md
data/defaults/: profile.yaml
docs/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  PLAN-1.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STACK.md  SUMMARY.md  configuration.md  privacy.md  troubleshooting.md
docs/install/: claude.md  codex.md  hermes.md  openclaw.md
docs/internal/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  PROJECT.md  README.maintainer.md  REQUIREMENTS.md  ROADMAP.md  STACK.md  SUMMARY.md  launch-checklist.md  post-merge-release-handoff.md  pr12-merge-checklist.md  v0.1.1-doctor-fix-handoff.md
hermes-profile/: distribution.yaml
hooks/: README.md  hooks.json  session-end.sh  session-start.sh
migrations/: 001_initial.sql
openclaw-plugin/: openclaw.plugin.json  package.json
openclaw-plugin/src/: index.ts  node-shims.d.ts
schemas/: answer_event.schema.json  boot_context.schema.json  conformance_run.schema.json  feedback_envelope.schema.json  host_capability_profile.schema.json  host_setup_profile.schema.json  init_plan.schema.json  init_request.schema.json  init_result.schema.json  lesson_exercise.schema.json  lifecycle_trigger.schema.json  manual_provider_install_report.schema.json  progress_report.schema.json  provider_install_action.schema.json  provider_status.schema.json  reading_result.schema.json  session_analysis.schema.json  text_modality_record.schema.json
scripts/: build-check.sh  changelog-promote.sh  version-guard.sh
skills/tutor-lesson/: SKILL.md
skills/tutor-progress/: SKILL.md
skills/tutor-reading/: SKILL.md
skills/tutor-setup/: SKILL.md
skills/tutor-vocab/: SKILL.md
skills/tutor-writing/: SKILL.md
specs/001-build-language-tutor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-vocab-depth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-richer-feedback-progress/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-text-modalities/: data-model.md  plan.md  quickstart.md  research.md  skill-inventory.md  skill-rewrite-evidence.md  skill-suite-coherence-audit.md  spec.md  tasks.md
specs/006-agent-adapter-setup/: HANDOFF-codex-hook-lifecycle-decision.md  hook-lifecycle-research.md  spec.md
specs/008-qa-harness-agent/: design.md  spec.md
src/language_tutor/: __init__.py  boot_context.py  cli.py  errors.py  evaluators.py  feedback.py  health.py  lessons.py  lifecycle.py  package_assets.py  progress.py  progress_rendering.py  reading.py  schemas.py  setup.py  srs.py  text_modalities.py  vocab.py  writing.py
tests/: conftest.py
tests/adapter_contract/: test_cli_json_contract.py  test_doctor_cli.py  test_evaluator_contract.py  test_evaluator_semantic_thresholds.py  test_lesson_cli.py  test_plugin_surface.py  test_reading_cli.py  test_session_end_cli.py  test_setup_cli.py  test_vocab_cli.py
tests/contract/: test_session_start_help.py
tests/docs/: test_install_docs.py
tests/golden/: test_boot_context.py  test_deterministic_rerender.py  test_feedback_rendering.py  test_progress_rendering.py  test_text_modality_rendering.py  test_vocab_feedback.py
tests/installer/: test_bundled_tree.py  test_config_root_blocked.py
tests/integration/: test_first_session.py  test_local_data_ownership.py  test_progress_flow.py  test_text_modality_flow.py  test_tutor_init_cli.py  test_vocabulary_flow.py  test_writing_flow.py
tests/migration/: test_migrations.py
tests/packaging/: test_openclaw_plugin_package.py
tests/release/: test_distribution_name.py  test_wheel_contents.py
tests/semantic/: test_text_modality_feedback.py
(+78 files in other folders)
