[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "lingo-loop"
version = "0.1.0"
description = "Local-first Claude Code language tutor"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Artem Veduta", email = "veduta.artem20@gmail.com" }]
keywords = ["language-learning", "tutor", "claude-code", "codex", "local-first", "cli", "lingo-loop"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Education",
  "Topic :: Education :: Computer Aided Instruction (CAI)",
]
dependencies = [
  "click>=8.1",
  "platformdirs>=4.2",
  "pydantic>=2.7",
  "ruamel.yaml>=0.18",
]

[project.urls]
Homepage = "https://github.com/artemVeduta/lingo-loop"
Source = "https://github.com/artemVeduta/lingo-loop"
Issues = "https://github.com/artemVeduta/lingo-loop/issues"
Changelog = "https://github.com/artemVeduta/lingo-loop/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "freezegun>=1.5",
  "pyright>=1.1",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "syrupy>=4.6",
]

[project.scripts]
tutor = "language_tutor.cli:main"

[tool.hatch.build]
include = [
  "/src",
  "/bin",
  "/skills",
  "/agents",
  "/data/defaults",
  "/migrations",
  "/schemas",
  "/.claude-plugin/plugin.json",
  "/.codex-plugin/plugin.json",
  "/.agents/plugins/marketplace.json",
  "/openclaw-plugin",
  "/hermes-profile",
]

[tool.hatch.build.targets.wheel]
packages = ["src/language_tutor"]

# Ship bundled host plugin/profile assets in the wheel so `tutor init` can read
# them via importlib.resources after `uv tool install lingo-loop`. Editable /
# source installs resolve the same files via repo root (see installer/assets.py).
[tool.hatch.build.targets.wheel.force-include]
".claude-plugin/plugin.json" = "language_tutor/_assets/.claude-plugin/plugin.json"
".codex-plugin/plugin.json" = "language_tutor/_assets/.codex-plugin/plugin.json"
"openclaw-plugin/package.json" = "language_tutor/_assets/openclaw-plugin/package.json"
"openclaw-plugin/openclaw.plugin.json" = "language_tutor/_assets/openclaw-plugin/openclaw.plugin.json"
"openclaw-plugin/tsconfig.json" = "language_tutor/_assets/openclaw-plugin/tsconfig.json"
"openclaw-plugin/src/index.ts" = "language_tutor/_assets/openclaw-plugin/src/index.ts"
"hermes-profile/distribution.yaml" = "language_tutor/_assets/hermes-profile/distribution.yaml"
"hermes-profile/config.yaml" = "language_tutor/_assets/hermes-profile/config.yaml"
"hermes-profile/SOUL.md" = "language_tutor/_assets/hermes-profile/SOUL.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=language_tutor --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = ["language_tutor"]

[tool.coverage.report]
fail_under = 80
show_missing = true
